// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`app/shared-components/ExitButton More Snapshot tests with react-test-renderer, but for edge cases edge case where text is empty string 1`] = `
<a
  aria-current={null}
  className="ExitButton__exit flex-container align-middle"
  href="/test"
  onClick={[Function]}
>
  
  <span
    className="ExitButton__exitIcon"
  />
</a>
`;

exports[`app/shared-components/ExitButton More Snapshot tests with react-test-renderer, but for edge cases edge case where text is false 1`] = `
<a
  aria-current={null}
  className="ExitButton__exit flex-container align-middle"
  href="/example"
  onClick={[Function]}
>
  <span
    className="ExitButton__exitIcon"
  />
</a>
`;

exports[`app/shared-components/ExitButton Snapshot tests with react-test-renderer exit button is rendered correctly 1`] = `
<a
  aria-current="page"
  className="ExitButton__exit flex-container align-middle active"
  href="/"
  onClick={[Function]}
  style={Object {}}
>
  <span
    className="ExitButton__exitText"
  >
    Exit
  </span>
  <span
    className="ExitButton__exitIcon"
  />
</a>
`;
